--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -71,8 +71,8 @@ html, body {
 		var chiTable = '1GJ2P6tXuUquucisemkyp6cw_LecKve3tIWH1_SAH';
 		var fastTable = '1UuLaZKNNwHtPt8ehi8vVas9yAeeYR_DXbPuUft0P';
 		var url = 'https://www.googleapis.com/fusiontables/v2/query';
-		var key = 'AIzaSyDIN-T_MwkdQPcOzmwalwdDG5nbP06KkDw';
-		var clientId = '630420208849-jfmabdjfemktm78268gqa7h54edlcgeq.apps.googleusercontent.com';
+		var key = 'AIzaSyAsCrwScvstMm2YdcVqsiYNc6jG_jXnWIo';
+		var clientId = '208608932270-onthogicn3206nnrbec42gchvu1eticu.apps.googleusercontent.com';
 		var scopes = 'https://www.googleapis.com/auth/fusiontables';
 		var rowid = 0;
 		var fil = 'Filipino';
@@ -694,7 +694,7 @@ html, body {
 	</script>
 
 	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIN-T_MwkdQPcOzmwalwdDG5nbP06KkDw&libraries=places,visualization&callback=initMap"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIN-T_MwkdQPcOzmwalwdDG5nbP06KkDw&libraries=places&callback=initMap"
 		async defer></script>
 
 	<script src="https://apis.google.com/js/client.js"></script>
