--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,6 +47,11 @@ html, body {
 			<td><input id="butStats" type="button" value="Show"
 				onclick="showStats(1);" /></td>
 		</tr>
+		<!-- <tr>
+			<td style="text-align: right"><label>Test : </label></td>
+			<td><input id="butStats" type="button" value="Test"
+				onclick="test();" /></td>
+		</tr> -->
 	</table>
 
 	<div id="stats" style="display: none; margin: 5px"></div>
@@ -81,6 +86,8 @@ html, body {
 		var chi = 'Chinese';
 		var fast = 'Fastfood';
 		var visitorArray;
+		
+		
 
 		function initMap() {
 
@@ -463,8 +470,8 @@ html, body {
 				'client_id' : clientId,
 				'scope' : scopes
 			};
-			gapi.auth
-					.authorize(
+			gapi.client.setApiKey(key);
+			gapi.auth.authorize(
 							config,
 							function(authResult) {
 								var restRequest = gapi.client
@@ -478,8 +485,7 @@ html, body {
 											method : 'POST'
 										});
 
-								restRequest
-										.execute(function(resp) {
+								restRequest.execute(function(resp) {
 											//var output = JSON.stringify(resp);
 											if (resp) {
 												var txtHtml = '<div><input type="button" value="Click here as a visitor" style="color:red" onclick="registerAsVisitor(\''
@@ -527,12 +533,7 @@ html, body {
 												
 												if (document
 														.getElementById('butStats').value == 'Hide') {
-													setTimeout(
-															checkVisitorValue(
-																	visitorArray,
-																	table,
-																	specialty),
-															5000);
+													checkVisitorValue(visitorArray,	table,	specialty);
 												}
 											}
 										});
@@ -602,6 +603,9 @@ html, body {
 		}
 
 		function fetchData(arr, callback) {
+			if(visitorArray.length > 0) {
+				visitorArray = [];
+			}
 			for (var i = 0; i < arr.length; i++) {
 				if (arr[i] == 'fil') {
 					callback(fil)
@@ -685,7 +689,7 @@ html, body {
 							arr[i][1] = parseInt(data.rows[0][0]);
 						}
 					}
-					setTimeout(computeStats(arr), 2000);
+					computeStats(arr);
 				}
 			}
 			xmlHttp.open("GET", countUrl, true);
@@ -694,7 +698,7 @@ html, body {
 	</script>
 
 	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIN-T_MwkdQPcOzmwalwdDG5nbP06KkDw&libraries=places&callback=initMap"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsCrwScvstMm2YdcVqsiYNc6jG_jXnWIo&libraries=places&callback=initMap"
 		async defer></script>
 
 	<script src="https://apis.google.com/js/client.js"></script>
